src/objects/Admin_Request__c.object
<CustomObject>
    <description>Used to log and request Salesforce administrative changes</description>
    <fields>
        <fullName>Admin_Request_Count__c</fullName>
        <formula>1</formula>
        <label>Admin Request Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <description>Who is approving building of this request and responsible for final approval before release?</description>
        <inlineHelpText>Who is approving building of this request and responsible for final approval before release?</inlineHelpText>
        <label>Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Only Sales Operations members can be assigned to admin requests</errorMessage>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>BigCommerce Sales Operations, System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Admin_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backout_Plan__c</fullName>
        <description>Plan for reversing the release</description>
        <inlineHelpText>Plan for reversing the release</inlineHelpText>
        <label>Backout Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biz_Apps_Change_Message__c</fullName>
        <defaultValue>&quot;Please Note: The Biz Apps Requests process is scheduled to move to JIRA on Thursday May 21, 2015. More information and training on the new process is available here: https://intranet.bigcommerce.com/display/sales/Biz+Apps+to+JIRA&quot;</defaultValue>
        <label>IMPORTANT MESSAGE</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Owner_Testing__c</fullName>
        <description>Has business owner testing been conducted?</description>
        <inlineHelpText>Has business owner testing been conducted?</inlineHelpText>
        <label>Business Owner Testing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confluence_Record__c</fullName>
        <inlineHelpText>Link to Confluence page for related topic</inlineHelpText>
        <label>Confluence Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contractor_Company__c</fullName>
        <description>What outsource company is completing this request?</description>
        <inlineHelpText>What outsource company is completing this request?</inlineHelpText>
        <label>Contractor Company</label>
        <picklist>
            <picklistValues>
                <fullName>Applikontech</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Admin Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Completed_Date__c</fullName>
        <description>Date that the contractor portion of the request is completed</description>
        <inlineHelpText>Date that the contractor portion of the request is completed</inlineHelpText>
        <label>Contractor Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_Completed__c</fullName>
        <description>Was the request completed?</description>
        <inlineHelpText>Was the request completed?</inlineHelpText>
        <label>Contractor Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Level__c</fullName>
        <description>What level is the contractor who is working this request?</description>
        <inlineHelpText>What level is the contractor who is working this request?</inlineHelpText>
        <label>Contractor Level</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Meets_Deadline__c</fullName>
        <description>Did this request get completed on or before its deadline?</description>
        <inlineHelpText>Did this request get completed on or before its deadline?</inlineHelpText>
        <label>Contractor Meets Deadline?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <description>What is the contractor&apos;s name?</description>
        <inlineHelpText>What is the contractor&apos;s name?</inlineHelpText>
        <label>Contractor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Notes__c</fullName>
        <description>Details on the quality and rating of this work</description>
        <inlineHelpText>Details on the quality and rating of this work</inlineHelpText>
        <label>Contractor Feedback</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contractor_Quality__c</fullName>
        <description>What was the quality of delivery on this request?</description>
        <inlineHelpText>What was the quality of delivery on this request?</inlineHelpText>
        <label>Contractor Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeds Expectation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets Expectation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Expectation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Questions__c</fullName>
        <description>Contractor questions to Biz Apps team on implementing request</description>
        <inlineHelpText>Contractor questions to Biz Apps team on implementing request</inlineHelpText>
        <label>Contractor Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contractor_Rating__c</fullName>
        <description>Contractor work rating</description>
        <inlineHelpText>Contractor work rating</inlineHelpText>
        <label>Contractor Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <description>What is the contractor status of the request?</description>
        <inlineHelpText>What is the contractor status of the request?</inlineHelpText>
        <label>Contractor Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_estimated_Hours__c</fullName>
        <description>How many hours did it take this contractor to complete this request?</description>
        <inlineHelpText>How many hours did it take this contractor to complete this request?</inlineHelpText>
        <label>Contractor Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Case creation date</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved_for_Release__c</fullName>
        <description>When was this release approved by the approver for final release?</description>
        <inlineHelpText>When was this release approved by the approver for final release?</inlineHelpText>
        <label>Date Approved for Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete__c</fullName>
        <description>How many days it took for us to close the case.</description>
        <formula>Completion_Date__c - DateValue(CreatedDate)</formula>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Est_Completed_Date__c</fullName>
        <description>Biz Apps Estimated Completion Date</description>
        <label>Est. Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Made__c</fullName>
        <description>How was the request made to Ops?</description>
        <inlineHelpText>How was the request made to Ops?</inlineHelpText>
        <label>How Made</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Request form</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Biz Apps internal notes</description>
        <label>Biz Apps Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JIRA_Ticket__c</fullName>
        <label>JIRA Ticket</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Report_Dashboard_Record__c</fullName>
        <label>Link to Report/Dashboard/Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_object_that_needs_to_be_included__c</fullName>
        <label>Link to object that needs to be included</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Priority_Rank__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trivial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Page__c</fullName>
        <description>Project page details if request is moved to a project</description>
        <label>Project Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a request for a project?</description>
        <label>Project?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Changelog__c</fullName>
        <description>Detailed Description of changes involved in implementing this release</description>
        <inlineHelpText>Detailed Description of changes involved in implementing this release</inlineHelpText>
        <label>Release Changelog</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Detail__c</fullName>
        <description>Specific details on what will be added/changed when the release is deployed</description>
        <inlineHelpText>Specific details on what will be added/changed when the release is deployed</inlineHelpText>
        <label>Release Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Impact__c</fullName>
        <description>Who/what is impacted by the release and how</description>
        <inlineHelpText>Who/what is impacted by the release and how</inlineHelpText>
        <label>Release Impact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request_Priority__c</fullName>
        <label>Request Priority</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>System Down (Can&apos;t work at all or can&apos;t work at full capacity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Implication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requesting_Department__c</fullName>
        <description>What is your department?</description>
        <inlineHelpText>What is your department?</inlineHelpText>
        <label>Requesting Department</label>
        <picklist>
            <picklistValues>
                <fullName>Paul Vaillancourt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ron Pragides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Alvarez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melanie Kalemba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandra Shapiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Overall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - SBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Schulz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <description>Biz Apps internal notes on resolution</description>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Level__c</fullName>
        <label>Biz Apps Level</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending - Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Notes__c</fullName>
        <label>Send Comment to Biz Apps Owner</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sandbox_Testing__c</fullName>
        <description>Has sandbox testing been conducted? If not, why</description>
        <inlineHelpText>Has sandbox testing been conducted? If not, why</inlineHelpText>
        <label>Sandbox Testing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Release_Date__c</fullName>
        <description>When are the changes for this Biz Apps request scheduled to be deployed?</description>
        <inlineHelpText>When are the changes for this Biz Apps request scheduled to be deployed?</inlineHelpText>
        <label>Scheduled Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz Apps Standup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Release Date Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Date Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scoping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Case Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor - Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Moved to Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Internal Resource</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Estimate__c</fullName>
        <label>Time Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should training be provided in anticipation of this release?</description>
        <inlineHelpText>Should training be provided in anticipation of this release?</inlineHelpText>
        <label>Training Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Provided__c</fullName>
        <description>What training was provided on this request?</description>
        <inlineHelpText>What training was provided on this request?</inlineHelpText>
        <label>Training Provided</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Specific request type</description>
        <inlineHelpText>Specify request type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting or Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access / Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Dashboard Finance Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update to Existing Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_s_the_problem_we_re_solving__c</fullName>
        <description>Provide an overview of the big picture of what problem you are trying to solve.</description>
        <label>What&apos;s the problem we&apos;re solving?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>category_bizapps__c</fullName>
        <description>General category of the request.</description>
        <inlineHelpText>Select the general category of your request.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Security Issue - Legal or Security impact related to this request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>zBiz Apps Request</label>
    <listViews>
        <fullName>Acquisition_Open_Requests</fullName>
        <columns>Number__c</columns>
        <columns>CreatedDate__c</columns>
        <columns>Est_Completed_Date__c</columns>
        <columns>Priority_Rank__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requesting_Department__c</field>
            <operation>equals</operation>
            <value>Sales - Acquisition</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Testing,Completed,Closed - Duplicate,Cancelled,Closed - Moved to Project</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Admin_Request__c.Admin_Request</value>
        </filters>
        <label>Acquisition Open Requests</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Open_Biz_Apps_Requests</fullName>
        <columns>Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Priority_Rank__c</columns>
        <columns>Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Sales_Ops_Level__c</columns>
        <columns>Hours_Spent__c</columns>
        <columns>Requesting_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Closed - No response,Closed - Duplicate,Cancelled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Admin_Request__c.Admin_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Salesforce support case submitted,Closed - Moved to Project</value>
        </filters>
        <label>All Open Biz Apps Requests</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Open_Biz_Apps_Requests</fullName>
        <columns>Number__c</columns>
        <columns>NAME</columns>
        <columns>Priority_Rank__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Project__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Requesting_Department__c</columns>
        <columns>Est_Completed_Date__c</columns>
        <columns>Sales_Ops_Level__c</columns>
        <columns>Hours_Spent__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>How_Made__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Closed - Duplicate,Cancelled,Closed - Moved to Project,Backlog</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Admin_Request__c.Admin_Request</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - No response</value>
        </filters>
        <label>All Unassigned Open Biz Apps Requests</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Biz_Apps_Requests_NEW_Unassigned</fullName>
        <columns>Priority_Rank__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sales_Ops_Level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Requesting_Department__c</columns>
        <columns>Number__c</columns>
        <columns>Status__c</columns>
        <columns>Hours_Spent__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>How_Made__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Testing,Completed,Closed - Duplicate,Cancelled,Closed - Moved to Project</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Admin_Request__c.Admin_Request</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Biz Apps Requests: Unassigned</label>
        <sharedTo/>
    </listViews>
</CustomObject>